--- a/coluzzi-andrea/package.json
+++ b/coluzzi-andrea/package.json
@@ -10,6 +10,7 @@
     "animejs": "^3.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
     "react-scripts": "5.0.0",
     "react-transition-group": "^4.4.5",
     "styled-components": "^5.3.5",
