--- a/coluzzi-andrea/package.json
+++ b/coluzzi-andrea/package.json
@@ -13,6 +13,7 @@
     "react-helmet": "^6.1.0",
     "react-scripts": "5.0.0",
     "react-transition-group": "^4.4.5",
+    "scrollreveal": "^4.0.9",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
