--- a/.github/workflows/verify_code.yml
+++ b/.github/workflows/verify_code.yml
@@ -2,9 +2,9 @@ name: Verify Code for PR
 
 on:
   push:
-    branches: ["master"]
+    branches: ['master']
   pull_request:
-    branches: ["master"]
+    branches: ['master']
 
 jobs:
   build:
