--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-icons": "^4.12.0",
     "react-scripts": "5.0.0",
     "react-transition-group": "^4.4.5",
     "scrollreveal": "^4.0.9",
