--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,16 +1,3 @@
 {
-  "parser": "@babel/eslint-parser",
-  "extends": [
-    "eslint:recommended",
-    "plugin:react/recommended", // Uses the recommended rules from @eslint-plugin-react
-    "plugin:react-hooks/recommended",
-    "plugin:prettier/recommended"
-  ],
-  "rules": {
-    "react/prop-types": "off"
-  },
-  "env": {
-    "browser": true,
-    "node": true
-  }
+  "extends": "next/core-web-vitals"
 }
