--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
-    "react-transition-group": "^4.4.5"
+    "react-transition-group": "^4.4.5",
+    "sharp": "^0.33.3"
   },
   "devDependencies": {
     "@types/node": "^20",
