--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.9.11",
+    "graphql": "^16.8.1",
     "next": "14.1.4",
+    "primereact": "^10.6.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-ga4": "^2.1.0",
     "react-icons": "^5.0.1",
+    "react-loading-skeleton": "^3.4.0",
     "react-transition-group": "^4.4.5",
     "sharp": "^0.33.3"
   },
@@ -22,7 +27,7 @@
     "@types/react-dom": "^18",
     "@types/react-transition-group": "^4.4.10",
     "autoprefixer": "^10.0.1",
-    "eslint": "^9",
+    "eslint": "^8",
     "eslint-config-next": "14.1.4",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
