--- a/package.json
+++ b/package.json
@@ -10,18 +10,27 @@
   },
   "dependencies": {
     "@apollo/client": "^3.9.11",
+    "@mdx-js/loader": "^3.1.0",
+    "@mdx-js/react": "^3.1.0",
+    "@next/mdx": "^15.1.2",
+    "@types/mdx": "^2.0.13",
     "graphql": "^16.8.1",
+    "gray-matter": "^4.0.3",
     "next": "14.1.4",
     "primereact": "^10.6.3",
     "react": "^18",
     "react-dom": "^18",
     "react-ga4": "^2.1.0",
-    "react-icons": "^5.0.1",
+    "react-icons": "^5.4.0",
     "react-loading-skeleton": "^3.4.0",
+    "react-markdown": "^9.0.1",
     "react-transition-group": "^4.4.5",
-    "sharp": "^0.33.3"
+    "rehype-raw": "^7.0.0",
+    "sharp": "^0.33.3",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.15",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
